// Original file: proto/users.proto


export interface LListTransactions {
  'id'?: (number);
  'userId'?: (number);
  'value'?: (number);
  'currency'?: (string);
  'date'?: (string);
  'typeOperations'?: (string);
}

export interface LListTransactions__Output {
  'id'?: (number);
  'userId'?: (number);
  'value'?: (number);
  'currency'?: (string);
  'date'?: (string);
  'typeOperations'?: (string);
}
