// Original file: proto/users.proto


export interface UserInfoReply {
  'email'?: (string);
  'id'?: (number);
  'name'?: (string);
  'iban'?: (string);
  'balanceEUR'?: (number);
  'balanceUSD'?: (number);
  'balance'?: (number);
}

export interface UserInfoReply__Output {
  'email'?: (string);
  'id'?: (number);
  'name'?: (string);
  'iban'?: (string);
  'balanceEUR'?: (number);
  'balanceUSD'?: (number);
  'balance'?: (number);
}
